--- a/gb/19/2/17/n11051408.md
+++ b/gb/19/2/17/n11051408.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hlsodg3891/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hlsodg3891/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hlsodg3891/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hlsodg3891/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>看神韵了解真相 老板：没中共 人民才幸福</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/190216190209100731-600x400.jpg" />
 <h6>Lucy Szymanski女士是芝加哥一家生产医疗器械的公司的老板，2月16日下午，她和先生Wes Szymanski一起在芝加哥郊区罗斯蒙特剧院观看神韵北美艺术团的演出。Szymanski夫妇表示，他们喜爱神韵演出。（林慧心／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年02月17日讯】（大纪元记者林慧心美国罗斯蒙特报导）Lucy Szymanski女士是芝加哥一家生产医疗器械的公司的老板，2月16日下午，她和先生Wes Szymanski一起在芝加哥郊区<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E7%BD%97%E6%96%AF%E8%92%99%E7%89%B9%E5%89%A7%E9%99%A2.md#1">罗斯蒙特剧院</a>观看<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团的演出。Szymanski夫妇表示，他们喜爱神韵演出。</p>
-<p>他们表示，这是他们第一次来看<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>。Szymanski太太说：“我喜欢神韵，美妙的音乐，美丽的舞蹈，美丽的画面和<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>。我喜爱神韵。”Szymanski先生在一旁说：“我也喜欢。也许我们明年还会回来。”</p>
+	<p>【大纪元2019年02月17日讯】（大纪元记者林慧心美国罗斯蒙特报导）Lucy Szymanski女士是芝加哥一家生产医疗器械的公司的老板，2月16日下午，她和先生Wes Szymanski一起在芝加哥郊区<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BD%97%E6%96%AF%E8%92%99%E7%89%B9%E5%89%A7%E9%99%A2.md#1">罗斯蒙特剧院</a>观看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团的演出。Szymanski夫妇表示，他们喜爱神韵演出。</p>
+<p>他们表示，这是他们第一次来看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>。Szymanski太太说：“我喜欢神韵，美妙的音乐，美丽的舞蹈，美丽的画面和<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>。我喜爱神韵。”Szymanski先生在一旁说：“我也喜欢。也许我们明年还会回来。”</p>
 <p>Szymanski夫妇是波兰裔，从小在共产党当政下的波兰长大，对共产党的统治深恶痛绝。对于演出中一个关于法轮功学员因为坚持自己的信仰而被中共迫害的节目，让他们夫妇非常感慨。</p>
 <p>Szymanski太太说：“1988-89之后，欧洲的共产主义在波兰和东德国等国家土崩瓦解，波兰现在更像一个自由的国家。我认为这更好，你知道，如果人民拥有自由，他们就能做他们愿意做的事情。但我知道目前中国仍然是共产党统治。”</p>
 <p>她接着说：“没有共产党，人民更幸福，有更多机会，真的有自由了，我们不必做共产党让我们必须做的事情，也不必去共产党让我们必须去的地方。”Szymanski先生在一旁点头赞同太太的话。</p>
-<p>Szymanski夫妇对神韵歌唱中提到的<ahref="https://github.com/hlsodg3891/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>来到世间救人和人类是从天上来到世间的故事深信不疑。“是啊，我们都来自天堂。”Szymanski太太说：“我认为真相就应该是这样。我们来自天堂，在我们去世后，我们会回到天堂。”</p>
+<p>Szymanski夫妇对神韵歌唱中提到的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>来到世间救人和人类是从天上来到世间的故事深信不疑。“是啊，我们都来自天堂。”Szymanski太太说：“我认为真相就应该是这样。我们来自天堂，在我们去世后，我们会回到天堂。”</p>
 <p>看了神韵演出的最后一个节目《最后的时刻》， Szymanski太太对手机对人们生活方式的改变忧心忡忡，颇为感叹的说：“这个节目有着重要的现实意义。而现实就是那样。”</p>
 <p>她觉得手机的运用方式，将让人变得更像机器人，“年轻人现在缺乏社交，沉湎于发送短信，即使他们就在隔壁房间，他们也不想见面，只是发短信。这不好。”</p>
 <p>责任编辑：王愉悦</p>
@@ -20,43 +20,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11049698.md#1">观神韵深受触动 名企副总：我们是神的孩子</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11049818.md#1">恢弘壮丽堪称奇观 墨尔本艺术界人士赞神韵</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11049906.md#1">领略天人合一 研究所主管感悟神韵深意</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11049961.md#1">神韵墨尔本再大爆满 精英感悟创世主降临?</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11050073.md#1">二胡优美无比 乐器公司老板赞神韵乐团</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/2/16/n11050086.md#1">神韵艺术非凡 法国银行主管成忠实粉丝</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049698.md#1">观神韵深受触动 名企副总：我们是神的孩子</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049818.md#1">恢弘壮丽堪称奇观 墨尔本艺术界人士赞神韵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049906.md#1">领略天人合一 研究所主管感悟神韵深意</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049961.md#1">神韵墨尔本再大爆满 精英感悟创世主降临?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11050073.md#1">二胡优美无比 乐器公司老板赞神韵乐团</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11050086.md#1">神韵艺术非凡 法国银行主管成忠实粉丝</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13642646.md#1">【时事军事】基辅兵临城下 谁的噩梦</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639463.md#1">【新闻看点】俄军调整部署 “大决战”风声满楼</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641259.md#1">【马克时空】俄乌战争让德国惊醒 军费加倍大幅强军</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639341.md#1">【更新3.11】乌克兰市长被武装人员带走</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639480.md#1">中俄联手反西方制裁？专家揭中共挺俄内幕</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641266.md#1">【中国观察】李克强的进退</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639867.md#1">持台湾护照赴英拍节目 杜汶泽在桃园机场捐款</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13637659.md#1">忧众星挺乌克兰？TVB明珠台再度不播奥斯卡</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640008.md#1">熊黛林产后复出荧屏 深度入戏状态引热议</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640388.md#1">《超时空亚当计划》影评：巧遇未来的自己 成冒险开端</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641003.md#1">韩国单日逾38万人染疫 TXT秀彬确诊有症状</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630795.md#1">比苹果含钾更高？早上喝一杯柠檬水的九大理由</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630796.md#1">咳嗽和喉咙痛的自然食疗法</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640276.md#1">36岁朱芯仪罹乳癌 一种风险最易被轻忽</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/2/23/n13599547.md#1">发作像心脏病、觉得快死了？3方法远离恐慌症</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636278.md#1">不用筛检和打疫苗 这三个国家欢迎所有游客</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hlsodg3891/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/17/n11051408.htm">看神韵了解真相 老板：没中共 人民才幸福</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/17/n11051408.htm">看神韵了解真相 老板：没中共 人民才幸福</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hlsodg3891/djy/blob/master/gb/19/2/17/n11051408.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hlsodg3891/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hlsodg3891/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hlsodg3891/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/2/17/n11051408.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
